Related: tdf#124219 allow building with older cairo

doesn't affect runtime, just buildtime

Change-Id: I0ab3055760d8be690bdfff560212db368a0fa261